src/test/deca/codegen/valid/homemade/printx_field.deca

class A {
    float jacky = 3.5;
}

{
    A a = new A();
    printlnx(a.jacky);
}