src/test/deca/codegen/invalid/homemade/autoreferencement.deca

class A {
	A a = new A();
}

{
	A classe = new A();
}
